--- a/projects/uss-maine/index.html
+++ b/projects/uss-maine/index.html
@@ -144,6 +144,8 @@ https://s3-us-west-2.amazonaws.com/wip-bucket/github/uss-maine/uss-maine1.jpg" s
 <img src="  
 https://s3-us-west-2.amazonaws.com/wip-bucket/github/uss-maine/uss-maine2.jpg" style="max-width: 750px;">
 <img src="  
+https://s3-us-west-2.amazonaws.com/wip-bucket/github/uss-maine/spread.jpg" style="max-width: 750px;">
+<img src="  
 https://s3-us-west-2.amazonaws.com/wip-bucket/github/uss-maine/uss-maine3.jpg" style="max-width: 750px;">
 <img src="  
 https://s3-us-west-2.amazonaws.com/wip-bucket/github/uss-maine/uss-maine4.jpg" style="max-width: 750px;">
