--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 		<h3>Case Studies</h3>
 
 		<!-- <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/arithmatic.gif" class="image-responsive"> -->
-		<p><a class="contentlinks" href="http://playarithmatic.com">Arithmatic</a>&mdash;An educational mobile game for iPhone, players must solve arithmetic questions as quickly as possible and compete in leaderboards.</p>
+		<p><a class="contentlinks" href="/projects/arithmatic/">Arithmatic</a>&mdash;An educational mobile game for iPhone, players must solve arithmetic questions as quickly as possible and compete in leaderboards.</p>
 
 		<!-- <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/artbinder.gif" class="image-responsive"> -->
 		<p><a class="contentlinks" href="/projects/artbinder-personas/">ArtBinder Personas</a>&mdash;Persona development and user research for the large range of ArtBinder's customers and products.</p>
