--- a/index.html
+++ b/index.html
@@ -174,12 +174,17 @@
 	#menubutton{
 		display: none;
 	}
-	#gists{
+	.mini{
 		font-size: 0.6em;
 	}
 
 	.image-responsive{
 		width: 100%;
+	}
+
+	.project-boxes{
+		max-width: 200px;
+		max-height: 200px;
 	}
 
 	@media (max-width: 700px){
@@ -244,7 +249,7 @@
 		<!-- <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/alice-crm.gif" class="image-responsive"> -->
 		<p><a class="contentlinks" href="/projects/alice-crm/">Alice Concierge CRM</a>&mdash;A customer relationship management system designed for hotel concierge as a part of Alice's backend hotel management solution.</p>
 
-		<h3>Coded Work &nbsp;<span id="gists"><a class="contentlinks" href="http://bl.ocks.org/AGdelaX">Check out my gists!</a></span></h3>
+		<h3>Coded Work &nbsp;<span class="mini"><a class="contentlinks" href="http://bl.ocks.org/AGdelaX">Check out my gists!</a></span></h3>
 
 		<!-- <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/divpixels.gif" class="image-responsive"> -->
 		<p><a class="contentlinks" href="/projects/divpixels/">divPixels</a>&mdash;A free to use, browser-based pixel art tool for quickly developing pixel drawings.</p>
@@ -256,10 +261,14 @@
 		<p><a class="contentlinks" href="/projects/koloni">Koloni</a>&mdash;Branding and UI design for a concept microfinance app.</p> -->
 
 		<h3>Printed Work</h3>
-		<p><a class="contentlinks" href="/projects/american-classics/">An Anthology of American Classics</a>&mdash;Four works of classic American literature designed and bound into one volume.</p>
+		<div class="project-boxes">
+			<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/ben-franklin-icon.gif">
+			<p class="mini"><a href="/projects/american-classics/" class="contentlinks">An Anthology of American Classics</a></p>
+		</div>
+
+		<!-- <p><a class="contentlinks" href="/projects/american-classics/">An Anthology of American Classics</a>&mdash;Four works of classic American literature designed and bound into one volume.</p>
 		<p><a class="contentlinks" href="/projects/uss-maine/">USS Maine Memorial Booklet</a>&mdash;A booklet examining the history of the USS Maine and the monument built to commemorate it. Its destruction sparked the beginning of the Spanish-American War, as well as the birth of 'yellow journalism.'</p>
-		<!-- <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/arroz-blanco.gif" class="image-responsive"> -->
-		<p><a class="contentlinks" href="/projects/arroz-blanco/">Arroz Blanco</a>&mdash;A t-shirt and sticker line I developed and sold in Puerto Rico Comic Con. The brand is a blend of otaku and Puerto Rican culture.</p>
+		<p><a class="contentlinks" href="/projects/arroz-blanco/">Arroz Blanco</a>&mdash;A t-shirt and sticker line I developed and sold in Puerto Rico Comic Con. The brand is a blend of otaku and Puerto Rican culture.</p> -->
 	</div>
 
 	<script type="text/javascript">
