--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
 		</div>
 
 		<div class="project-boxes">
-			<a href="/projects/whitewithred/"><img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/white-with-red-icon.gif" class="project-img"></a>
+			<a href="/projects/whitewithred/"><img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/white-with-red.jpg" class="project-img"></a>
 			<p class="mini"><a href="/projects/whitewithred/" class="contentlinks">White with Red</a></p>
 			<h4>Coded Work</h4>
 		</div>
@@ -368,7 +368,8 @@
 		</div>
 
 		<div class="project-boxes">
-			<a href="/projects/arroz-blanco/"><img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/arroz-icon.gif" class="project-img"></a>
+			<a href="/projects/arroz-blanco/"><img src="	
+			https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/arroz-blanco.jpg" class="project-img"></a>
 			<p class="mini"><a href="/projects/arroz-blanco/" class="contentlinks">Arroz Blanco</a></p>
 			<h4>Printed Work</h4>
 		</div>
