--- a/index.html
+++ b/index.html
@@ -325,6 +325,15 @@
 	<div id="content">
 		<p id="first-paragraph">Hello! I'm a designer and web developer from Puerto Rico now based in NYC. I believe design is visual engineering. When I work I always think about the content before the form. I've worked on design at places like <a class="contentlinks" href="http://artbinder.com">ArtBinder</a> and <a class="contentlinks" href="http://aliceapp.com">Alice</a>, and have recently launched an <a class="contentlinks" href="http://playarithmatic.com">app of my own</a>. I am skilled in UI/UX design, graphic design, illustration and front-end development. Outside of work I like webcomics, video games and good beer. <br><a class="contentlinks" href="mailto:agdelax@gmail.com">Hit me up</a> if you ever need a designer.</p>
 
+		<div id="arithmatic-section" style="position: relative;width: 100%;display: inline-block;height: 100%;">
+			<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/arithmatic.gif" style="max-width: 50%;position: absolute;right: 0;">
+			<div style="max-width: 50%;position: absolute;left: 0;">
+				<h2>Arithmatic</h2>
+				<p>An educational mobile game for iPhone, players must solve arithmetic questions as quickly as possible and compete in leaderboards.</p>
+				<a href="/projects/arithmatic/">View Case Study</a>
+			</div>
+		</div>
+
 		<!-- <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/arithmatic.gif" class="image-responsive"> -->
 		<div class="case-study-box">
 			<p class="case-study-text"><a class="contentlinks" href="/projects/arithmatic/">Arithmatic</a>&mdash;An educational mobile game for iPhone, players must solve arithmetic questions as quickly as possible and compete in leaderboards.</p>
