--- a/index.html
+++ b/index.html
@@ -250,6 +250,9 @@
 		.case-study-box{
 			min-height: 500px;
 		}
+		#arithmatic-text{
+		top: 20px;
+	}
 	}
 
 	@media (max-width: 750px){
@@ -297,6 +300,15 @@
 		margin-right: 100px;
 	}
 
+	#arithmatic-text{
+		top: 10px;
+		left: 10px;
+	}
+
+	#arithmatic-section{
+		height: 1100px;
+	}
+
 	}
 	</style>
 </head>
@@ -332,7 +344,7 @@
 
 		<div id="arithmatic-section" style="position: relative;width: 98%;display: inline-block;height: 600px;border:2px solid black;">
 			<img src="https://s3.amazonaws.com/playarithmatic.com/add-phones.png" style="max-width: 450px;position: absolute;right: 30px;top: 30px;">
-			<div style="max-width: 50%;position: absolute;left: 30px; padding: 30px;top: 50px;margin-right: 450px;">
+			<div style="max-width: 50%;position: absolute;left: 30px; padding: 30px;top: 50px;margin-right: 450px;" id="arithmatic-text">
 				<p style="font-size: 1.5em">Arithmatic</p>
 				<p>An educational mobile game for iPhone, players must solve arithmetic questions as quickly as possible and compete in leaderboards.</p>
 				<a href="/projects/arithmatic/" class="contentlinks">View Case Study</a>
