--- a/index.html
+++ b/index.html
@@ -180,15 +180,6 @@
 		bottom: 10px;
 	}*/
 
-	#gists{
-		font-size: 1em;
-		font-weight: 400;
-	}
-
-	.image-responsive{
-		width: 100%;
-	}
-
 	#project-boxes-container{
 		text-align: justify;
 		margin-top: 70px;
@@ -225,12 +216,12 @@
 
 	.case-study-box{
 		position: relative;
-		max-width: 98%;
+		width: 98%;
 		display: inline-block;
 		vertical-align: top;
 		border: 2px solid black;
 		min-height: 150px;
-		margin: 20px 0;
+		margin: 0 0 15px 0;
 	}
 
 	.case-study-text{
