--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 		display: inline-block;
 		vertical-align: top;
 		border: 2px solid black;
-		min-height: 150px;
+		/*min-height: 150px;*/
 		margin: 0 0 15px 0;
 	}
 
@@ -231,7 +231,7 @@
 
 	h4{
 		position: absolute;
-		bottom: -23px;
+		top: 0;
 		left: 10px;
 		text-transform: uppercase;
 		font-size: 0.5em;
