--- a/index.html
+++ b/index.html
@@ -226,22 +226,17 @@
 
 	.case-study-text{
 		padding: 10px;
+		margin: 25px 0 0 0;
 	}
 
 	h4{
 		position: absolute;
-		top: 0;
+		top: -19px;
 		left: 10px;
 		text-transform: uppercase;
 		font-size: 0.5em;
 		font-weight: 600;
 	}
-
-	/*@media (max-width: 950px){
-		.case-study-box{
-			min-height: 500px;
-		}
-	}*/
 
 	@media (max-width: 750px){
 		#scroll-down{
@@ -265,12 +260,12 @@
 		font-size: 1em; 
 		line-height: 1.7em;
 	}
-	.case-study-box{
+	/*.case-study-box{
 		max-width: 99%;
 		min-height: 250px;
 		padding-bottom: 20px;
 		margin: 10px 0;
-	}
+	}*/
 	.project-boxes{
 		max-width: 700px;
 		min-height: 100px;
@@ -284,9 +279,9 @@
 		width: 100px;
 	}
 
-	.mini{
+/*	.mini{
 		margin-right: 100px;
-	}
+	}*/
 
 	}
 	</style>
