--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 		border: 2px solid black;
 		position: relative;
 		margin:20px 0 0 0;
-		min-height:500px;
+		/*min-height:500px;*/
 		vertical-align: top;
 /*		text-align: left;
 		*display: inline;
@@ -268,7 +268,7 @@
 	}*/
 	.project-boxes{
 		max-width: 700px;
-		min-height: 500px;
+		/*min-height: 500px;*/
 		margin: 10px 0;
 		display: block;
 	}
