--- a/index.html
+++ b/index.html
@@ -172,18 +172,6 @@
 	#menubutton{
 		display: none;
 	}
-	/*.mini{
-		padding: 10px;
-		font-size: 0.7em;
-		line-height: 1.5em;
-		position: absolute;
-		bottom: 10px;
-	}*/
-
-/*	#project-boxes-container{
-		text-align: justify;
-		margin-top: 70px;
-	}*/
 
 	.project-boxes{
 		max-width: 49%;
@@ -191,22 +179,8 @@
 		border: 2px solid black;
 		position: relative;
 		margin:20px 0 0 0;
-		/*min-height:500px;*/
 		vertical-align: top;
-/*		text-align: left;
-		*display: inline;
-		zoom: 1;*/
 	}
-
-/*	.project-img{
-		width: 200px;
-	}
-
-	#project-boxes-container:after{
-		content: "";
-		width: 100%;
-		display: inline-block;
-	}*/
 
 	#first-paragraph{
 		font-size: 1.6em; 
@@ -220,7 +194,6 @@
 		display: inline-block;
 		vertical-align: top;
 		border: 2px solid black;
-		/*min-height: 150px;*/
 		margin: 0 0 15px 0;
 	}
 
@@ -260,15 +233,8 @@
 		font-size: 1em; 
 		line-height: 1.7em;
 	}
-	/*.case-study-box{
-		max-width: 99%;
-		min-height: 250px;
-		padding-bottom: 20px;
-		margin: 10px 0;
-	}*/
 	.project-boxes{
 		max-width: 700px;
-		/*min-height: 500px;*/
 		margin: 10px 0;
 		display: block;
 	}
@@ -278,10 +244,6 @@
 		height: 100px;
 		width: 100px;
 	}
-
-/*	.mini{
-		margin-right: 100px;
-	}*/
 
 	}
 	</style>
@@ -316,19 +278,16 @@
 	<div id="content">
 		<p id="first-paragraph">Hello! I'm a designer and web developer from Puerto Rico now based in NYC. I believe design is visual engineering. When I work I always think about the content before the form. I've worked on design at places like <a class="contentlinks" href="http://artbinder.com">ArtBinder</a> and <a class="contentlinks" href="http://aliceapp.com">Alice</a>, and have recently launched an <a class="contentlinks" href="http://playarithmatic.com">app of my own</a>. I am skilled in UI/UX design, graphic design, illustration and front-end development. Outside of work I like webcomics, video games and good beer. <br><a class="contentlinks" href="mailto:agdelax@gmail.com">Hit me up</a> if you ever need a designer.</p>
 
-		<!-- <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/arithmatic.gif" class="image-responsive"> -->
 		<div class="case-study-box">
 			<h4>Case Study</h4>
 			<p class="case-study-text"><a class="contentlinks" href="/projects/arithmatic/">Arithmatic</a>&mdash;An educational mobile game for iPhone, players must solve arithmetic questions as quickly as possible and compete in leaderboards.</p>
 		</div>
 
-		<!-- <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/artbinder.gif" class="image-responsive"> -->
 		<div class="case-study-box">
 			<h4>Case Study</h4>
 			<p class="case-study-text"><a class="contentlinks" href="/projects/artbinder-personas/">ArtBinder Personas</a>&mdash;Persona development and user research for the large range of ArtBinder's customers and products.</p>
 		</div>
 
-		<!-- <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/Home/alice-crm.gif" class="image-responsive"> -->
 		<div class="case-study-box">
 			<h4>Case Study</h4>
 			<p class="case-study-text"><a class="contentlinks" href="/projects/alice-crm/">Alice Concierge CRM</a>&mdash;A customer relationship management system designed for hotel concierge as a part of Alice's backend hotel management solution.</p>
@@ -336,15 +295,15 @@
 
 		<div class="project-boxes">
 			<h4>Coded Work</h4>
-			<p class="case-study-text"><a href="/projects/divpixels/" class="contentlinks">divPixels</a>&mdash;A customer relationship management system designed for hotel concierge as a part of Alice's backend hotel management solution.</p>
-			<p class="case-study-text"><a href="/projects/whitewithred/" class="contentlinks">White with Red</a>&mdash;A customer relationship management system designed for hotel concierge as a part of Alice's backend hotel management solution.</p>
+			<p class="case-study-text"><a href="/projects/divpixels/" class="contentlinks">divPixels</a>&mdash;An easy to use, browser-based pixel art tool, built as a weekend project in JavaScript.</p>
+			<p class="case-study-text"><a href="/projects/whitewithred/" class="contentlinks">White with Red</a>&mdash;Illustrations accompanying a short horror story of the same name, made interactive and built with SVG animations.</p>
 		</div>
 
 		<div class="project-boxes">
 			<h4>Printed Work</h4>
-			<p class="case-study-text"><a href="/projects/american-classics/" class="contentlinks">An Anthology of American Classics</a>&mdash;A customer relationship management system designed for hotel concierge as a part of Alice's backend hotel management solution.</p>
-			<p class="case-study-text"><a href="/projects/uss-maine/" class="contentlinks">USS Maine Memorial Booklet</a>&mdash;A customer relationship management system designed for hotel concierge as a part of Alice's backend hotel management solution.</p>
-			<p class="case-study-text"><a href="/projects/arroz-blanco/" class="contentlinks">Arroz Blanco</a>&mdash;A customer relationship management system designed for hotel concierge as a part of Alice's backend hotel management solution.</p>
+			<p class="case-study-text"><a href="/projects/american-classics/" class="contentlinks">An Anthology of American Classics</a>&mdash;A compilation of four volumes of classic American literature, designed and bound within the same book.</p>
+			<p class="case-study-text"><a href="/projects/uss-maine/" class="contentlinks">USS Maine Memorial Booklet</a>&mdash;A booklet describing the history of the USS Maine, its destruction, the beginning of the Spanish-American War, and an analysis of the monument built to commemorate it.</p>
+			<p class="case-study-text"><a href="/projects/arroz-blanco/" class="contentlinks">Arroz Blanco</a>&mdash;A t-shirt and sticker line made for Puerto Rico Comic-Con. Designed as a cross between Puerto Rican and otaku culture.</p>
 		</div>
 
 	</div>
