--- a/projects/alice-crm/index.html
+++ b/projects/alice-crm/index.html
@@ -142,18 +142,18 @@
 <p>At Alice I was placed in charge of leading the design for the development of a concierge CRM system for managing contacts and making recommendations to hotel guests on nearby vendors. We wanted to develop a system where concierge can quickly make recommendations to hotel guests by searching through their notes and database on nearby vendors and being able to easily export the vendor data as a PDF.</p>
 
 <p>After doing a competitive analysis of similar CRM systems (Yelp, TripAdvisor, OpenTable, etc.) we concluded that the most efficient way to display the data was a bisected screen, one side showing the list of available vendors and the other side showing the selected vendor profile. This way concierge can be able to look at a vendor in closer detail and still keep track of other options in the area without having to switch in and out of multiple web pages.</p>
-<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/alice-crm/vendor-crm-main.png" style="border: 1px solid #d3d3d3">
+<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/alice-crm/vendor-crm-main.jpg" style="border: 1px solid #d3d3d3">
 <p>Hotel employees can also easily leaves notes and reviews on the vendor profile, making the information more personalised to the hotel the service is hosted on.</p>
-<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/alice-crm/vendor-crm-categories.png" style="border: 1px solid #d3d3d3">
+<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/alice-crm/vendor-crm-categories.jpg" style="border: 1px solid #d3d3d3">
 <img src="
-https://s3-us-west-2.amazonaws.com/wip-bucket/github/alice-crm/vendor-crm-entry.png">
-<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/alice-crm/vendor-crm-email.png">
+https://s3-us-west-2.amazonaws.com/wip-bucket/github/alice-crm/vendor-crm-entry.jpg">
+<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/alice-crm/vendor-crm-email.jpg">
 <img src="
-https://s3-us-west-2.amazonaws.com/wip-bucket/github/alice-crm/vendor-crm-print.png">
+https://s3-us-west-2.amazonaws.com/wip-bucket/github/alice-crm/vendor-crm-print.jpg">
 <p>The final step was developing a PDF layout that takes account of all the data available on the profile that can be printed or emailed to the hotel guest, along with navigation and additional comments by the concierge.</p>
 
 <img src="
-https://s3-us-west-2.amazonaws.com/wip-bucket/github/alice-crm/vendor-crm-pdf.png" style="border: 1px solid #d3d3d3;max-width:550px;">
+https://s3-us-west-2.amazonaws.com/wip-bucket/github/alice-crm/vendor-crm-pdf.jpg" style="border: 1px solid #d3d3d3;max-width:550px;">
 </div>
 <script type="text/javascript">
   var clicked = false;
