--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<link rel="icon" type="image/x-icon" href="https://s3-us-west-2.amazonaws.com/wip-bucket/github/favicon.ico" />
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/lettering.js/0.7.0/jquery.lettering.min.js"></script>
-	<script src="http://circletype.labwire.ca/js/circletype.js"></script>
+	<script src="circletype.min.js"></script>
 
 	<style type="text/css">
 	body{
