--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 		-o-animation-timing-function: linear;
 		height: 105vmin !important;
 		width: 105vmin !important;
-		position: absolute;
+		position: absolute !important;
 	}
 
 	#links{
