--- a/index.html
+++ b/index.html
@@ -327,6 +327,7 @@
 
 		<div class="project-boxes">
 			<h4>Coded Work</h4>
+			<p class="case-study-text"><a href="https://itunes.apple.com/us/app/creepypasta-stickers/id1299579002" class="contentlinks">Creepypasta Stickers</a>&mdash;A horror-themed sticker app for iOS based on the best creepy stories found online.</p>
 			<p class="case-study-text"><a href="/projects/divpixels/" class="contentlinks">divPixels</a>&mdash;An easy to use, browser-based pixel art tool, built as a weekend project in JavaScript.</p>
 			<p class="case-study-text"><a href="/projects/whitewithred/" class="contentlinks">White with Red</a>&mdash;Illustrations accompanying a short horror story of the same name, made interactive and built with SVG animations.</p>
 			<p class="case-study-text"><a href="http://bl.ocks.org/AGdelaX/raw/5f3982201cfff21e631d/" class="contentlinks">NYC Vehicle Collisions 2014</a>&mdash;An interactive map of NYC plotting vehicles collisions by victim type, time and location. Built with D3 and Leaflet.</p>
