--- a/arithmatic/index.html
+++ b/arithmatic/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700" rel="stylesheet">
+    <meta name="google-site-verification" content="cjL7T2XTlh6YrR2x6kqFL4BF-DK5qbYfeFgS8jP2QCU" />
     <link type="text/css" rel="stylesheet" href="../style.css">
   </head>
   <body>
